Webserv/grammar.txt
SERVER:		server \n PORT() IP() NAME() ERROR() LOCATION() (server | end)
	PORT:		listen word \n
	IP:			host word \n
#facultatif
	NAME:		server_name NAME_() | z
	NAME_:		word \n | word NAME_()
	ERROR:		error_page word word \n ERROR() | z
	SIZE:		client_max_body_size word \n | z
	LOCATION : 	location word \n METH() ROOT() AUTOINDEX() INDEX() CGIPATH() RETURN() LOCATION() | z
		METH:		allow_methods METH_()
		METH_:		word \n | word METH_()
	#facultafif
		ROOT:		root word \n | z
		AUTOINDEX:	autoindex word \n | z 
		INDEX:		index word \n | z 
		CGIPATH:	cgi_path word \n | z 
		RETURN:		return word \n | z 

Legende:
z : zerolink;
end : *iterator == container.end() 
